New node_locations_t class for storing node locations in memory
This is a very memory-efficient storage which will be used for the new
ram middle.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -11,6 +11,7 @@ set(osm2pgsql_lib_SOURCES
   middle.cpp
   middle-pgsql.cpp
   middle-ram.cpp
+  node-locations.cpp
   node-persistent-cache.cpp
   node-ram-cache.cpp
   options.cpp
