--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -79,7 +79,6 @@ jobs:
       LUAJIT_OPTION: OFF
       POSTGRESQL_VERSION: 10
       POSTGIS_VERSION: 3
-      CPP_VERSION: 17
       BUILD_TYPE: Debug
 
     steps:
@@ -98,7 +97,6 @@ jobs:
       LUAJIT_OPTION: OFF
       POSTGRESQL_VERSION: 11
       POSTGIS_VERSION: 2.5
-      CPP_VERSION: 17
       BUILD_TYPE: Debug
 
     steps:
@@ -116,7 +114,6 @@ jobs:
       LUAJIT_OPTION: ON
       POSTGRESQL_VERSION: 12
       POSTGIS_VERSION: 2.5
-      CPP_VERSION: 17
       BUILD_TYPE: Debug
 
     steps:
@@ -135,7 +132,6 @@ jobs:
       LUAJIT_OPTION: ON
       POSTGRESQL_VERSION: 13
       POSTGIS_VERSION: 3
-      CPP_VERSION: 17
       BUILD_TYPE: Debug
 
     steps:
@@ -153,7 +149,6 @@ jobs:
       LUAJIT_OPTION: OFF
       POSTGRESQL_VERSION: 13
       POSTGIS_VERSION: 3
-      CPP_VERSION: 17
       USE_PROJ_LIB: 6
       BUILD_TYPE: Debug
 
@@ -172,7 +167,6 @@ jobs:
       LUAJIT_OPTION: OFF
       POSTGRESQL_VERSION: 13
       POSTGIS_VERSION: 3
-      CPP_VERSION: 17
       USE_PROJ_LIB: off
       BUILD_TYPE: Debug
 
@@ -191,7 +185,6 @@ jobs:
       LUAJIT_OPTION: OFF
       POSTGRESQL_VERSION: 14
       POSTGIS_VERSION: 3
-      CPP_VERSION: 17
       USE_PROJ_LIB: 6
       BUILD_TYPE: Debug
 
@@ -210,7 +203,6 @@ jobs:
       LUAJIT_OPTION: ON
       POSTGRESQL_VERSION: 13
       POSTGIS_VERSION: 2.5
-      CPP_VERSION: 17
       BUILD_TYPE: Release
 
     steps:
@@ -226,8 +218,61 @@ jobs:
       CXX: g++-10
       POSTGRESQL_VERSION: 13
       POSTGIS_VERSION: 2.5
-      CPP_VERSION: 17
       BUILD_TYPE: Release
+
+    steps:
+      - uses: actions/checkout@v2
+      - uses: ./.github/actions/ubuntu-prerequisites
+      - uses: ./.github/actions/build-and-test
+
+  ubuntu22-pg14-clang12-cpp17:
+    runs-on: ubuntu-22.04
+
+    env:
+      CC: clang-12
+      CXX: clang++-12
+      LUA_VERSION: 5.3
+      LUAJIT_OPTION: OFF
+      POSTGRESQL_VERSION: 14
+      POSTGIS_VERSION: 3
+      CPP_VERSION: 17
+      BUILD_TYPE: Debug
+
+    steps:
+      - uses: actions/checkout@v2
+      - uses: ./.github/actions/ubuntu-prerequisites
+      - uses: ./.github/actions/build-and-test
+
+  ubuntu22-pg14-clang12-cpp20:
+    runs-on: ubuntu-22.04
+
+    env:
+      CC: clang-12
+      CXX: clang++-12
+      LUA_VERSION: 5.3
+      LUAJIT_OPTION: OFF
+      POSTGRESQL_VERSION: 14
+      POSTGIS_VERSION: 3
+      CPP_VERSION: 20
+      BUILD_TYPE: Debug
+
+    steps:
+      - uses: actions/checkout@v2
+      - uses: ./.github/actions/ubuntu-prerequisites
+      - uses: ./.github/actions/build-and-test
+
+  ubuntu22-pg14-gcc11-cpp20:
+    runs-on: ubuntu-22.04
+
+    env:
+      CC: gcc-11
+      CXX: g++-11
+      LUA_VERSION: 5.3
+      LUAJIT_OPTION: OFF
+      POSTGRESQL_VERSION: 14
+      POSTGIS_VERSION: 3
+      CPP_VERSION: 20
+      BUILD_TYPE: Debug
 
     steps:
       - uses: actions/checkout@v2
