Refactor expire code to not use WKB directly
This disentangles the WKB code from the expire code. There are further
refactorings to be done, but they will come in later commits to keep
things separate.

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -67,6 +67,7 @@ set_test(test-reprojection LABELS NoDB)
 set_test(test-taginfo LABELS NoDB)
 set_test(test-util LABELS NoDB)
 set_test(test-wildcard-match LABELS NoDB)
+set_test(test-wkb LABELS NoDB)
 
 # these tests require LUA support
 if (HAVE_LUA)
