--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,5 +1,7 @@
 
-set(osm2pgsql_lib_SOURCES
+add_library(osm2pgsql_lib STATIC)
+
+target_sources(osm2pgsql_lib PRIVATE
   db-check.cpp
   db-copy.cpp
   dependency-manager.cpp
@@ -39,7 +41,7 @@ if (LUA_FOUND OR LUAJIT_FOUND)
                  "${CMAKE_CURRENT_SOURCE_DIR}/init.lua")
     file(READ "${CMAKE_CURRENT_SOURCE_DIR}/init.lua" LUA_INIT_CODE)
     configure_file(lua-init.cpp.in lua-init.cpp @ONLY)
-    list(APPEND osm2pgsql_lib_SOURCES
+    target_sources(osm2pgsql_lib PRIVATE
         flex-table.cpp
         flex-table-column.cpp
         geom-transform.cpp
@@ -49,21 +51,20 @@ if (LUA_FOUND OR LUAJIT_FOUND)
         ${CMAKE_CURRENT_BINARY_DIR}/lua-init.cpp)
 endif()
 
-list(APPEND osm2pgsql_lib_SOURCES ${PROJECT_BINARY_DIR}/src/version.cpp)
+target_sources(osm2pgsql_lib PRIVATE ${PROJECT_BINARY_DIR}/src/version.cpp)
 
 if (HAVE_PROJ4)
-    list(APPEND osm2pgsql_lib_SOURCES reprojection-generic-proj4.cpp)
+    target_sources(osm2pgsql_lib PRIVATE reprojection-generic-proj4.cpp)
     if (NOT MSVC)
         set_source_files_properties(reprojection-generic-proj4.cpp
             PROPERTIES COMPILE_FLAGS -Wno-deprecated-declarations)
     endif()
 elseif(HAVE_PROJ6)
-    list(APPEND osm2pgsql_lib_SOURCES reprojection-generic-proj6.cpp)
+    target_sources(osm2pgsql_lib PRIVATE reprojection-generic-proj6.cpp)
 else()
-    list(APPEND osm2pgsql_lib_SOURCES reprojection-generic-none.cpp)
+    target_sources(osm2pgsql_lib PRIVATE reprojection-generic-none.cpp)
 endif()
 
-add_library(osm2pgsql_lib STATIC ${osm2pgsql_lib_SOURCES})
 set_target_properties(osm2pgsql_lib PROPERTIES OUTPUT_NAME osm2pgsql)
 target_link_libraries(osm2pgsql_lib ${LIBS})
 
