--- a/src/version.cpp.in
+++ b/src/version.cpp.in
@@ -14,12 +14,12 @@ char const *get_build_type() noexcept
 
 char const *get_osm2pgsql_version() noexcept
 {
-    return "@PACKAGE_VERSION@@VERSION_FROM_GIT@";
+    return "@PROJECT_VERSION@@VERSION_FROM_GIT@";
 }
 
 char const *get_osm2pgsql_short_version() noexcept
 {
-    return "@PACKAGE_VERSION@";
+    return "@PROJECT_VERSION@";
 }
 
 char const *get_minimum_postgresql_server_version() noexcept
