move windows build to github actions
Adds tests and packaging to the windows builds. Also adds a job that
tests that the newly packaged osm2pgsql works. Disables appveyor.

--- a/.github/actions/win-test/action.yml
+++ b/.github/actions/win-test/action.yml
@@ -4,7 +4,7 @@ runs:
   using: composite
   steps:
     - name: Test
-      run: ctest --output-on-failure -C Release -L NoDB
+      run: ctest --output-on-failure -C Release
       shell: bash
       working-directory: build
 
