--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -216,33 +216,75 @@ jobs:
       - uses: ./.github/actions/ubuntu-prerequisites
       - uses: ./.github/actions/build-and-test
 
-  windows-2019:
-    runs-on: windows-2019
+  windows:
+    strategy:
+      matrix:
+        os: [windows-2019, windows-2022]
+    runs-on: ${{ matrix.os }}
     env:
       GETOPT_INCLUDE_DIR: ${{ github.workspace }}/../wingetopt/src
       GETOPT_LIBRARY: ${{ github.workspace }}/../wingetopt/build/Release/wingetopt.lib
+      VCPKG_DEFAULT_BINARY_CACHE: C:/vcpkg_binary_cache
     steps:
       - uses: actions/checkout@v2
+      - uses: actions/cache@v2
         with:
-          submodules: true
+          path: |
+            C:/vcpkg_binary_cache
+          key: vcpkg-binary-cache-${{ matrix.os }}
+      - uses: actions/cache@v2
+        with:
+          path: |
+            C:/postgis.zip
+          key: postgis-cache
+      - name: Prepare cache
+        run: if [ ! -d C:/vcpkg_binary_cache ]; then mkdir C:/vcpkg_binary_cache; fi
+        shell: bash
+      - uses: ./.github/actions/win-postgres
       - uses: ./.github/actions/win-install
       - uses: ./.github/actions/win-getopt
       - uses: ./.github/actions/win-cmake
       - uses: ./.github/actions/win-build
       - uses: ./.github/actions/win-test
+      - name: Package osm2pgsql
+        run: |
+          mkdir c:/artifact/
+          mkdir c:/artifact/osm2pgsql-bin
+          cp -r Release/* ../README.md ../COPYING ../*.style ../scripts ../flex-config c:/artifact/osm2pgsql-bin/
+        shell: bash
+        working-directory: build
+        if: matrix.os == 'windows-2022'
+      - name: 'Upload Artifact'
+        uses: actions/upload-artifact@v2
+        with:
+          name: osm2pgsql-win64
+          path: c:/artifact
+        if: matrix.os == 'windows-2022'
 
-  windows-2022:
+  windows-package:
+    needs: windows
     runs-on: windows-2022
     env:
-      GETOPT_INCLUDE_DIR: ${{ github.workspace }}/../wingetopt/src
-      GETOPT_LIBRARY: ${{ github.workspace }}/../wingetopt/build/Release/wingetopt.lib
+      OSMURL: https://download.geofabrik.de/europe/monaco-latest.osm.bz2
     steps:
       - uses: actions/checkout@v2
+      - uses: actions/cache@v2
         with:
-          submodules: true
-      - uses: ./.github/actions/win-install
-      - uses: ./.github/actions/win-getopt
-      - uses: ./.github/actions/win-cmake
-      - uses: ./.github/actions/win-build
-      - uses: ./.github/actions/win-test
+          path: |
+            C:/postgis.zip
+          key: postgis-cache
+      - uses: actions/download-artifact@v2
+        with:
+          name: osm2pgsql-win64
+      - uses: ./.github/actions/win-postgres
+      - name: Set up database
+        run: |
+          & $env:PGBIN\createdb osm
+          & $env:PGBIN\psql -d osm -c "CREATE EXTENSION hstore; CREATE EXTENSION postgis;"
+        shell: pwsh
+      - name: Get test data
+        run: (new-object net.webclient).DownloadFile($env:OSMURL, "testfile.osm.bz2")
+      - name: Exceute osm2pgsql
+        run: ./osm2pgsql-bin/osm2pgsql --slim -d osm testfile.osm.bz2
+        shell: bash
 
