Add and test box_t class and envelope(geom) function

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -8,6 +8,7 @@ target_sources(osm2pgsql_lib PRIVATE
   expire-tiles.cpp
   gazetteer-style.cpp
   geom.cpp
+  geom-box.cpp
   geom-from-osm.cpp
   geom-functions.cpp
   input.cpp
