Set HAVE_GENERIC_PROJ directly in CMake config
Instead of going through config.h. It is simpler and including config.h
can't be forgotten.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -220,7 +220,7 @@ else()
         message(STATUS "Found proj_api.h")
         find_library(PROJ_LIBRARY NAMES proj)
         message(STATUS "Found Proj [API 4] ${PROJ_LIBRARY}")
-        set(HAVE_GENERIC_PROJ 1)
+        add_definitions(-DHAVE_GENERIC_PROJ=4)
         set(HAVE_PROJ4 1)
         list(APPEND LIBS ${PROJ_LIBRARY})
         include_directories(SYSTEM ${PROJ4_INCLUDE_DIR})
@@ -229,7 +229,7 @@ else()
         find_library(PROJ_LIBRARY NAMES proj)
         if (PROJ_LIBRARY)
             message(STATUS "Found Proj [API 6] ${PROJ_LIBRARY}")
-            set(HAVE_GENERIC_PROJ 1)
+            add_definitions(-DHAVE_GENERIC_PROJ=6)
             set(HAVE_PROJ6 1)
             list(APPEND LIBS ${PROJ_LIBRARY})
             include_directories(SYSTEM ${PROJ6_INCLUDE_DIR})
