Refactor: Add new tile_t class and use it in expire code
This is the next step in refactoring the tile expire code. More to
come...

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -33,6 +33,7 @@ target_sources(osm2pgsql_lib PRIVATE
   taginfo.cpp
   tagtransform-c.cpp
   tagtransform.cpp
+  tile.cpp
   thread-pool.cpp
   util.cpp
   wildcmp.cpp
