--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -65,6 +65,7 @@ set_test(test-persistent-cache LABELS NoDB)
 set_test(test-pgsql)
 set_test(test-reprojection LABELS NoDB)
 set_test(test-taginfo LABELS NoDB)
+set_test(test-tile LABELS NoDB)
 set_test(test-util LABELS NoDB)
 set_test(test-wildcard-match LABELS NoDB)
 set_test(test-wkb LABELS NoDB)
