add behave to CI

--- a/.github/actions/ubuntu-prerequisites/action.yml
+++ b/.github/actions/ubuntu-prerequisites/action.yml
@@ -26,7 +26,9 @@ runs:
           postgresql-${POSTGRESQL_VERSION}-postgis-${POSTGIS_VERSION}-scripts \
           postgresql-client postgresql-contrib-${POSTGRESQL_VERSION} \
           python3-psycopg2 \
+          python3-setuptools \
           zlib1g-dev
+        pip3 install behave
         if [ "$CC" = clang-8 ]; then sudo apt-get install -yq --no-install-suggests --no-install-recommends clang-8; fi
       shell: bash
 
