--- a/.github/actions/win-install/action.yml
+++ b/.github/actions/win-install/action.yml
@@ -6,6 +6,6 @@ runs:
     - name: Install packages
       run: vcpkg install bzip2:x64-windows expat:x64-windows zlib:x64-windows proj4:x64-windows boost-system:x64-windows boost-filesystem:x64-windows boost-property-tree:x64-windows lua:x64-windows libpq:x64-windows
       shell: bash
-    - name: Install psycopg2
-      run: python -m pip install psycopg2
+    - name: Install psycopg2 and beahve
+      run: python -m pip install psycopg2 behave
       shell: bash
