Check for Lua binary under more names (with version)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -197,7 +197,7 @@ if (WITH_LUA)
         include_directories(SYSTEM ${LUA_INCLUDE_DIR})
     endif()
     add_definitions(-DHAVE_LUA=1)
-    find_program(LUA_EXE lua)
+    find_program(LUA_EXE NAMES lua lua5.4 lua5.3 lua5.2 lua5.1)
 else()
     message(STATUS "Building without Lua support")
 endif()
