bdd: rename parameters to command-line

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -124,7 +124,7 @@ endif()
 find_program(BEHAVE_BIN NAMES behave)
 
 if (BEHAVE_BIN)
-    foreach(BDD_TEST IN ITEMS regression flex parameters)
+    foreach(BDD_TEST IN ITEMS regression flex command-line)
         add_test(NAME bdd-${BDD_TEST}
                  COMMAND behave -DBINARY=$<TARGET_FILE:osm2pgsql> ${BDD_TEST}
                  WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/bdd)
