Add run-behave script for convenience
If run with `-p` as first option it will wrap the call to `behave` in a
call to `pg_virtualenv` for your convenience. All other command line
parameters of `run-behave` will be passed through to behave.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -314,6 +314,10 @@ if (BUILD_TESTS)
         set(TESTING_TIMEOUT 1200)
     endif()
     add_subdirectory(tests)
+    configure_file(
+        ${PROJECT_SOURCE_DIR}/tests/run-behave.in
+        ${PROJECT_BINARY_DIR}/run-behave
+    )
 else()
     message(STATUS "Tests disabled. Set BUILD_TESTS=ON to enable tests.")
 endif()
